<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="Création d'un nouveau parcours"
        android:textSize="30dp"></TextView>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="11dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="Nom du parcours"
        android:textSize="25dp"
        android:textStyle="bold"></TextView>

    <EditText
        android:id="@+id/editParcoursName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Mon nouveau parcours"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"></EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="Orientations disponibles"
        android:textSize="25dp"
        android:textStyle="bold"></TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/parcoursPredefList"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:clickable="true"
        android:scrollbars="vertical">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/nouveauParcours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#63AC63"
        android:text="Creer Nouveau Parcours"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        />


    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="Ce nom de parcours existe déjà"
        android:textColor="#AD3535"
        android:textSize="18sp"
        android:textStyle="italic"
        android:visibility="invisible" />

    <Button
        android:id="@+id/deconnexion"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="0"
        android:text="Retour"
        android:layout_gravity="center_horizontal|center"
        android:visibility="visible" />


</LinearLayout>