<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/TitleConnexion"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:fontFamily="sans-serif"
        android:text="@string/loginWelcome"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#030000"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.257" />

    <EditText
        android:id="@+id/loginInput"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/inputborder"
        android:maxLength="8"
        android:ems="10"
        android:hint="@string/loginText"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:textColor="#88030000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleConnexion"
        app:layout_constraintVertical_bias="0.074" />

    <Button
        android:id="@+id/connexionButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="#63AC63"
        android:text="@string/loginConnexion"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginInput"
        app:layout_constraintVertical_bias="0.068" />

    <TextView
        android:id="@+id/connexionError"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="28dp"
        android:text="@string/loginError"
        android:textAlignment="center"
        android:textColor="#AD3535"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connexionButton" />

</androidx.constraintlayout.widget.ConstraintLayout>